Change submodule common_cells remote to SC fork

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,9 +4,6 @@
 [submodule "corev_apu/fpga-support"]
 	path = corev_apu/fpga-support
 	url = https://github.com/pulp-platform/fpga-support.git
-[submodule "common/submodules/common_cells"]
-	path = common/submodules/common_cells
-	url = https://github.com/pulp-platform/common_cells.git
 [submodule "corev_apu/axi"]
 	path = corev_apu/axi
 	url = https://github.com/pulp-platform/axi.git
@@ -52,3 +49,6 @@
 [submodule "corev_apu/tb/common_verification"]
 	path = corev_apu/tb/common_verification
 	url = https://github.com/pulp-platform/common_verification.git
+[submodule "common/submodules/common_cells"]
+	path = common/submodules/common_cells
+	url = git@github.com:siliconcompiler/common_cells.git
